--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=true
+jar.compress=false
 javac.classpath=\
     ${libs.JFreeChart.classpath}:\
     ${libs.JCommon.classpath}:\
     ${libs.JfreeChart.classpath}:\
-    ${libs.sqlite-jdbc.classpath}
+    ${libs.sqlite-jdbc.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
